--- a/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m_2020_2/lit_rep_m_inout_lot_multiple.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m_2020_2/lit_rep_m_inout_lot_multiple.jrxml
@@ -42,7 +42,7 @@ WHERE 	m_inoutline_m_inout_id = $P{RECORD_ID}]]>
 	<detail>
 		<band height="7" splitType="Stretch">
 			<textField>
-				<reportElement x="60" y="0" width="140" height="7" uuid="b578afdf-d768-4ab4-bb29-1e20affdef33">
+				<reportElement x="60" y="0" width="140" height="7" isRemoveLineWhenBlank="true" uuid="b578afdf-d768-4ab4-bb29-1e20affdef33">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement>
@@ -51,23 +51,29 @@ WHERE 	m_inoutline_m_inout_id = $P{RECORD_ID}]]>
 				<textFieldExpression><![CDATA[$F{m_attributesetinstance_lot}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="0" width="60" height="7" uuid="d078e424-06bb-402b-92d3-f3a5a9761123"/>
+				<reportElement x="0" y="0" width="60" height="7" uuid="d078e424-06bb-402b-92d3-f3a5a9761123">
+					<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
+				</reportElement>
 				<textElement>
 					<font fontName="DejaVu Sans Mono" size="6" isBold="true"/>
+					<paragraph leftIndent="2"/>
 				</textElement>
 				<text><![CDATA[LOTTO/BATCH:]]></text>
 			</staticText>
 		</band>
 		<band height="7">
 			<staticText>
-				<reportElement x="0" y="0" width="60" height="7" uuid="e2db2fbf-93a5-4421-9716-0ded45cdf525"/>
+				<reportElement x="0" y="0" width="60" height="7" uuid="e2db2fbf-93a5-4421-9716-0ded45cdf525">
+					<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
+				</reportElement>
 				<textElement>
 					<font fontName="DejaVu Sans Mono" size="6" isBold="true"/>
+					<paragraph leftIndent="2"/>
 				</textElement>
 				<text><![CDATA[SCAD./EXP.:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="60" y="0" width="140" height="7" uuid="a8e02db2-a61f-471b-9d06-64545349150b"/>
+				<reportElement x="60" y="0" width="140" height="7" isRemoveLineWhenBlank="true" uuid="a8e02db2-a61f-471b-9d06-64545349150b"/>
 				<textElement>
 					<font fontName="DejaVu Sans Mono" size="6" isBold="true"/>
 				</textElement>
@@ -76,16 +82,19 @@ WHERE 	m_inoutline_m_inout_id = $P{RECORD_ID}]]>
 		</band>
 		<band height="7">
 			<textField>
-				<reportElement x="60" y="0" width="140" height="7" uuid="ecc40f7b-045a-4185-adbd-baa5831c90ba"/>
+				<reportElement x="60" y="0" width="140" height="7" isRemoveLineWhenBlank="true" uuid="ecc40f7b-045a-4185-adbd-baa5831c90ba"/>
 				<textElement>
 					<font fontName="DejaVu Sans Mono" size="6" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{m_inoutlinema_movementqty}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="0" width="60" height="7" uuid="e039a85a-319f-48bc-9aae-d7ea7a1740ef"/>
+				<reportElement x="0" y="0" width="60" height="7" uuid="e039a85a-319f-48bc-9aae-d7ea7a1740ef">
+					<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
+				</reportElement>
 				<textElement>
 					<font fontName="DejaVu Sans Mono" size="6" isBold="true"/>
+					<paragraph leftIndent="2"/>
 				</textElement>
 				<text><![CDATA[QTA'/QTY]]></text>
 			</staticText>
